# PixelEngineRaytracer

./: CMakeLists.txt  PixelEngine.sln  PixelEngine.vcxproj  README.md  imgui.ini
documentation/: resourceful links.txt
objects/: Rock.mtl  Skull.mtl
shaders/: NoLightingShader.frag  NoLightingShader.vert  NoLightingShaderFrag.spv  NoLightingShaderVert.spv  comp.spv  compile.bat  compile.sh  frag.spv  shader.comp  shader.frag  shader.vert  vert.spv
source/: PixelComputePipeline.cpp  PixelComputePipeline.h  PixelGraphicsPipeline.cpp  PixelGraphicsPipeline.h  PixelImage.cpp  PixelImage.h  PixelObject.cpp  PixelObject.h  PixelRenderer.cpp  PixelRenderer.h  PixelScene.cpp  PixelScene.h  PixelWindow.cpp  PixelWindow.h  Utility.h  kb_input.cpp  kb_input.h  main.cpp  stb_image.h
